# mcp-servers-manager

./: .gitignore  README.md  __init__.py  constants.py  main.py  pyproject.toml  system_defaults.json
_play/: claude.py  gemini.py
controllers/: __init__.py  server_controller.py  source_controller.py
models/: __init__.py  server.py  source.py  utils.py
ui/: __init__.py  dashboard_view.py  main_window.py  server_sources_view.py  styles.py
ui/custom_widgets/: __init__.py  detail_section.py  server_item.py  source_card.py  source_item.py
utils/: system_utils.py
